# finnvocabcollect

./: .gitignore  Dockerfile.pipe  Dockerfile.web  README.md  figure_skating.py  make_compound_list.sql  make_wordlist.py  plot_en_wordlist_freqs.py  plot_selfassess.py  plot_timing2.py  proc_interest.py  pyproject.toml
.github/workflows/: docker-publish.yml
extrafigs/: filter_wiktxtract_en.py  plot_en_wordlist_freqs.py
finnwordlist/: aggs.py  clean_convert_df.py  convert_numberbatch.py  convert_wordlist_to_bare.py  deriv.py  deriv_compos.py  extra_words.py  loan.py  make_derivtrim_wordlist.py  make_full_wordlist.py  make_wordlist.py  merge.py  multicorpusfreqs.py  ordinal_blacklist.py  plot_compositionality.py  plot_fi_wordlist_freqs.py  project_wordlist.py
finnwordlist/deriv/: compound_compositionality.py  plot_compound_compositionality.py
selfassess/: README.md  alembic.ini  devenv.sh  login.sh  pyproject.toml  rsh.sh
selfassess/alembic/: env.py
selfassess/alembic/versions/: 1cd043e6c268_add_miniexam_tables.py  6889fea58ea5_non_null_a_bunch_of_stuff.py  6e460f174a15_add_timestamp_to_session_log_entry.py  7cd0a93ad2f5_add_indexes.py  7f55f03c3cef_.py  85f1687b929c_added_some_accept_flags.py  8b0e16095ba9_add_separate_participant_response_.py  8bdb3878ea0a_add_deadline_columns_to_participant.py  942d25b6277b_add_primary_native_key_for_main_native_.py  ad2fd89406df_add_undo_to_participant.py  c934a4a23707_add_some_fields_to_miniexam_response_.py  cc4a47150e62_.py  cde958d20c94_add_years_in_finland.py  dd3d26ffb422_add_participant_language.py  df60f067baca_add_mark_to_miniexam_response.py
selfassess/selfassess/: action_participant.py  app.py  clear_accepted_proofs.py  database.py  extend_deadline.py  extra_words.py  fix_miniexam.py  forms.py  initdb.py  mark.py  modify_proof_type.py  new.py  quali.py  queries.py  status.py  utils.py
selfassess/selfassess/export/: add_reliabilities.py  csvs.py  duckdb.py  miniexam.py  payment.py  simple.py  timing.py  utils.py
selfassess/selfassess/templates/: 401.html  about.html  about_snippet.html  base.html  base_return.html  manifest.webmanifest  miniexam.html  miniexam_fixup.html  overview.html  progress_snippet.html  proof.html  selfassess.html  selfassess_ajax.html  terms.html  withdrawn.html  wordinfo_snippet.html
vocabanalysis/: big_disagreements.py  get_disagreements.py  plot_participants.py  plot_self_trans_confmat.py  plot_timing.py  queries.py
workflow/: Snakefile
(+3 files in other folders)
