[tool.poetry]
name = "finnvocabcollect"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
click = "^7.1.2"
lxml = "^4.6.2"
pyarrow = "^3.0.0"
snakemake = "^6.0.4"
langcodes = {version = "^3.1.0", extras = ["data"]}
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
