[tool.poetry]
name = "finnvocabcollect"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pandas = "^1.2.3"
click = "^8.0.0"
lxml = "^4.6.2"
pyarrow = "^4.0.0"
snakemake = "^6.0.4"
langcodes = {version = "^3.1.0", extras = ["data"]}
nltk = "^3.6.2"
gensim = "^4.1.0"
seaborn = "^0.11.2"
finntk = "^0.0.73"
orjson = "^3.6.3"
duckdb = {version = "0.3.4.dev72", allow-prereleases = true}
freqknowfit = {git = "https://github.com/frankier/freqknowfit.git", rev = "b0ea2550df69570114a079628c4212e2836d640c"}
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
