[tool.poetry]
name = "selfassess"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
orjson = "^3.6.1"
Quart = "^0.15.1"
SQLAlchemy = "^1.4.22"
aiosqlite = "^0.17.0"
shortuuid = "^1.0.1"
user-agents = "^2.2.0"
alembic = "^1.6.5"
duckdb = "^0.2.9"
langcodes = "^3.1.0"
pandas = "^1.3.3"
language-data = "^1.0"
WTForms-Alchemy = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
